--- a/index.html
+++ b/index.html
@@ -375,13 +375,6 @@
     2. הוספת פונקציה renderHistoryTable()
     3. שינוי window.loadHistory לקרוא לה -->
 
-    <!-- החלק שאתה צריך להוסיף מתחת ללוח הזמנים -->
-    <div class="card">
-      <div class="section">
-        <div class="section-title">📚 היסטוריית שבועות</div>
-        <div id="historyTable" class="table-container"></div>
-      </div>
-    </div>
 
     <!-- בפונקציית הסקריפט הקיימת -->
     <script>
@@ -505,7 +498,13 @@
     </div>
   </div>
 </div>
-
+<!-- Weekly History -->
+<div class="card">
+  <div class="section">
+    <div class="section-title">📚 היסטוריית שבועות</div>
+    <div id="historyTable" class="table-container"></div>
+  </div>
+</div>
 <!-- Modals -->
 <div id="addWorkerModal" class="modal">
   <div class="modal-content">
